Arreglo de dominios

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="stylesheet" href="./../styles/styleIndex.css" type='text/css'>
+<link rel="stylesheet" href="./styles/styleIndex.css" type='text/css'>
 <head>
   <meta charset="UTF-8">
   <title>Bienvenido - Pide-Cola 2.0</title>
@@ -10,8 +10,8 @@
   <div class="barraSuperior">
     <ul>
       <li class="Home"> Pide-Cola 2.0 </li>
-      <li class="botonLoginRegister"><a href="./register.html"> Regístrate </a></li>
-      <li class="botonLoginRegister"><a href="./login.html"> Ingresar </a></li>
+      <li class="botonLoginRegister"><a href="./webpages/register.html"> Regístrate </a></li>
+      <li class="botonLoginRegister"><a href="./webpages/login.html"> Ingresar </a></li>
     </ul>
   </div>
 </body>
