--- a/webpages/login.html
+++ b/webpages/login.html
@@ -25,7 +25,7 @@
     </div>
   </form>
   <div id="fondo">
-    <img src="./assets/ucab.jpg" alt="">
+    <img src="./../assets/ucab.jpg" alt="">
   </div>
 </body>
 </html>
