--- a/webpages/register.html
+++ b/webpages/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="fondo">
-    <img src="./assets/ucab.jpg" alt="">
+    <img src="./../assets/ucab.jpg" alt="">
   </div>
 </body>
 </html>
