--- a/webpages/login.html
+++ b/webpages/login.html
@@ -6,22 +6,23 @@
   <title> Ingresar - Pide-Cola 2.0</title>
 </head>
 <body>
-  <form action="">
+  <form action="./main.html">
     <div class="logo">
       <h1>PIDE-COLA 2.0</h1>
     </div>
 
     <div id="datos">
-      <label><b>Email</b></label>
-      <input type="text" placeholder="Ingresar email" name="email" required>
-      <label><b>Contraseña</b></label>
-      <input type="password" placeholder="Ingresar contraseña" name="contraseña" required>
-      <input type="checkbox" checked> Recuérdame
-      <button type="submit">Ingresar</button>
+      <label><b>USUARIO/EMAIL</b></label>
+      <input type="text" placeholder="Ingresar usuario o email" name="emailUsuario" required><br>
+      <label><b>CONTRASEÑA</b></label>
+      <input type="password" placeholder="Ingresar contraseña" name="contraseña" required><br>
+      <button type="submit">INICIAR SESIÓN</button>
+      <button>REGISTRARSE</button>
+      <input type="hidden" name="registro" value="./register.html">
     </div>
 
-    <div class="extra">
-      <button type="button"><a href="./index.html">Cancelar</a></button>
+    <div class="derechos">
+      <h1>PPC C.A, ALL RIGHTS RESERVED</h1>
     </div>
   </form>
   <div id="fondo">
