--- a/webpages/main.html
+++ b/webpages/main.html
@@ -3,9 +3,42 @@
 <link rel="stylesheet" href="./../styles/styleApp.css" type='text/css'>
 <head>
   <meta charset="UTF-8">
-  <title> Pide-Cola 2.0 </title>
+  <title> Home - Pide-Cola 2.0 </title>
 </head>
+
 <body>
+
+  <div class="topbar">
+    <h4><a href="./main.html">PIDE-COLA 2.0</a></h4>
+  </div>
+
+  <div class="sidebar">
+    <h4>ANGEL RIVERO</h4>
+    <img src="./../assets/ph_perfil.jpg" width="200" height="200">
+    <a href="./perfil.html">MI PERFIL</a>
+    <a href="./pedirCola.html">PEDIR COLA</a>
+    <a href="./darCola.html">DAR COLA</a>
+    <a href="./../index.html">CERRAR SESIÓN</a>
+  </div>
+
+  <div class="main">
+    <h1>¡Bienvenido a Pide-Cola 2.0!</h1>
+    <div class="columna">
+      <h3>DA LA COLA</h3>
+      <p>Para empezar a dar la cola solo presiona el botón en el menú izquierdo, indica a donde te diriges y cuantas personas puedes llevar contigo</p>
+      <h4><a href="./darCola.html">DAR LA COLA</a></h4>
+    </div>
+    <div class="columna">
+      <h3>PIDE LA COLA</h3>
+      <p>Para empezar a pedir la cola ingresa, desde el menú izquierdo e ingresa tu destino final y cuantas personas te van a acompañar</p>
+      <h4><a href="./pedirCola.html">PEDIR LA COLA</a></h4>
+    </div>
+    <div class="columna">
+      <h3>TU PERFIL</h3>
+      <p>Tu perfil contiene todo tipo de información para que las demás personas puedan verte, además de un sistema de ranking en el caso que des la cola</p>
+      <h4><a href="./perfil.html">MIRA TU PERFIL</a></h4>
+    </div>
+  </div>
 
 </body>
 </html>
