Añadido las páginas de pedir y dar cola

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -40,5 +40,9 @@
     </div>
   </div>
 
+  <div class="footer">
+    <p class="textoFooter">PPC C.A, ALL RIGHTS RESERVED</p>
+  </div>
+
 </body>
 </html>
