--- a/webpages/register.html
+++ b/webpages/register.html
@@ -24,9 +24,11 @@
       <input type="password" placeholder="Verificar contraseña" name="password2" required><br>
       <label><b>EMAIL</b></label>
       <input type="text" placeholder="Ingresar email" name="email" required><br>
+      <label><b>EDAD</b></label>
+      <input type="text" placeholder="Ingresa edad" name="edad" required><br>
       <label><b>CARRERA</b></label><br>
       <select>
-        <option value="" selected disabled hidden>Elige carrera</option>
+        <option selected disabled hidden>Elige carrera</option>
         <option value="carrera">Administración y Contaduría</option>
         <option value="carrera">Ciencias Sociales</option>
         <option value="carrera">Economía</option>
