--- a/webpages/perfil.html
+++ b/webpages/perfil.html
@@ -45,5 +45,9 @@
     </div>
   </div>
 
+  <div class="footer">
+    <p class="textoFooter">PPC C.A, ALL RIGHTS RESERVED</p>
+  </div>
+
 </body>
 </html>
