Añadido selección de usuarios

--- a/webpages/elegirPedirCola.html
+++ b/webpages/elegirPedirCola.html
@@ -22,7 +22,35 @@
   </div>
 
   <div class="main">
-
+    <h1>ELIGE A QUIEN LE PEDIRÁS LA COLA</h1>
+    <div class="usuario">
+      <h5>Jackie Chuan</h5>
+      <img src="./../assets/usuario_5.jpg" width="80px" height="100px">
+      <p>Administración y Contaduría</p><br>
+      <p>RESEÑAS: Mixtas</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
+    <div class="usuario">
+      <h5>Dimitri Pachenko</h5>
+      <img src="./../assets/usuario_elegido2.jpg" width="80px" height="100px">
+      <p>Derecho</p><br>
+      <p>RESEÑAS: Muy Positivas</p><br>
+      <a href="./usuarioPedirCola.html"><button>DAR COLA</button></a>
+    </div>
+    <div class="usuario">
+      <h5>Juan Sucre</h5>
+      <img src="./../assets/usuario_6.jpg" width="80px" height="100px">
+      <p>Economía</p><br>
+      <p>RESEÑAS: Mayormente Positivas</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
+    <div class="usuario">
+      <h5>Pablo Francisco</h5>
+      <img src="./../assets/usuario_7.jpg" width="80px" height="100px">
+      <p>Teología</p><br>
+      <p>RESEÑAS: Muy Negativas</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
   </div>
 
   <div class="footer">
