--- a/webpages/elegirDarCola.html
+++ b/webpages/elegirDarCola.html
@@ -22,7 +22,35 @@
   </div>
 
   <div class="main">
-
+    <h1>ELIGE A QUIÉN/QUIENES LE DARÁS LA COLA</h1>
+    <div class="usuario">
+      <h5>Christian Pacheco</h5>
+      <img src="./../assets/usuario_3.jpg" width="80px" height="100px">
+      <p>Letras</p><br>
+      <p>CANTIDAD: 1</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
+    <div class="usuario">
+      <h5>Juan Marítimo</h5>
+      <img src="./../assets/usuario_1.jpg" width="80px" height="100px">
+      <p>Ingeniería en Telecomunicaciones</p><br>
+      <p>CANTIDAD: 2</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
+    <div class="usuario">
+      <h5>Antonio Virtuoso</h5>
+      <img src="./../assets/usuario_elegido.jpg" width="80px" height="100px">
+      <p>Derecho</p><br>
+      <p>CANTIDAD: 3</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
+    <div class="usuario">
+      <h5>Amelia Smile</h5>
+      <img src="./../assets/usuario_4.jpg" width="80px" height="100px">
+      <p>Filosofía</p><br>
+      <p>CANTIDAD: 1</p><br>
+      <button type="button">DAR COLA</button>
+    </div>
   </div>
 
   <div class="footer">
