Añadido chat y pestaña de reseñas

--- a/webpages/usuarioPedirCola.html
+++ b/webpages/usuarioPedirCola.html
@@ -33,15 +33,43 @@
       <p>Derecho</p>
       <h4>TELÉFONO</h4>
       <p>0414-5555555</p>
+      <h4>RESEÑAS</h4>
+      <p>Muy Positivas</p>
     </div>
-    <div class="otrosBotones">
-      <img src="./../assets/twitter_logo.png" width="50px" height="50px">
+    <div class="botonesRedes">
+      <div class="otrosBotones">
+        <img src="./../assets/twitter_logo.png" width="50px" height="50px">
+      </div>
+      <div class="otrosBotones">
+        <img src="./../assets/facebook_logo.png" width="50px" height="50px">
+      </div>
+      <div class="otrosBotones">
+        <img src="./../assets/instagram_logo.png" width="50px" height="50px">
+      </div>
     </div>
-    <div class="otrosBotones">
-      <img src="./../assets/facebook_logo.png" width="50px" height="50px">
+    <div class="reseña">
+      <p>Deja una reseña.</p>
+      <button>PUBLICAR</button>
     </div>
-    <div class="otrosBotones">
-      <img src="./../assets/instagram_logo.png" width="50px" height="50px">
+    <div class="chat">
+      <div class="chatBox">
+        <img src="./../assets/ph_perfil.jpg" alt="Avatar" class="derecha" width="100px" height="100px">
+        <p>Epa pana ¿qué más? ¿Me podrás llevar?</p>
+        <span class="tiempoD">1:00pm</span>
+      </div>
+      <div class="chatBox azul">
+        <img src="./../assets/usuario_elegido2.jpg" alt="Avatar" class="izquierda" width="100px" height="100px">
+        <p>Si vale, yo te llevo, dame 5 minutos</p>
+        <span class="tiempoI">1:01pm</span>
+      </div>
+      <div class="chatBox">
+        <img src="./../assets/ph_perfil.jpg" alt="Avatar" class="derecha" width="100px" height="100px">
+        <p>Dale pues, te veo en sol</p>
+        <span class="tiempoD">1:01pm</span>
+      </div>
+      <div class="chatBox gris">
+        <p>Haz click aquí para enviar un mensaje.</p>
+      </div>
     </div>
   </div>
 
