--- a/webpages/main.html
+++ b/webpages/main.html
@@ -3,7 +3,11 @@
 <link rel="stylesheet" href="./../styles/styleApp.css" type='text/css'>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Home - Pide-Cola 2.0 </title>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -26,23 +30,25 @@
     <div class="columna">
       <h3>DA LA COLA</h3>
       <p>Para empezar a dar la cola solo presiona el botón en el menú izquierdo, indica a donde te diriges y cuantas personas puedes llevar contigo</p>
-      <h4><a href="./darCola.html">DAR LA COLA</a></h4>
+        <a href="./darCola.html" class="btn btn-success" role="button">Dar la cola</a>
     </div>
     <div class="columna">
       <h3>PIDE LA COLA</h3>
       <p>Para empezar a pedir la cola ingresa, desde el menú izquierdo e ingresa tu destino final y cuantas personas te van a acompañar</p>
-      <h4><a href="./pedirCola.html">PEDIR LA COLA</a></h4>
+      <a href="./pedirCola.html" class="btn btn-success" role="button">Pedir la cola</a>
     </div>
     <div class="columna">
       <h3>TU PERFIL</h3>
       <p>Tu perfil contiene todo tipo de información para que las demás personas puedan verte, además de un sistema de ranking en el caso que des la cola</p>
-      <h4><a href="./perfil.html">MIRA TU PERFIL</a></h4>
+      <a href="./perfil.html" class="btn btn-success" role="button">Mira tu perfil</a>
     </div>
   </div>
 
   <div class="footer">
     <p class="textoFooter">PPC C.A, ALL RIGHTS RESERVED</p>
   </div>
-
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
