--- a/webpages/elegirDarCola.html
+++ b/webpages/elegirDarCola.html
@@ -4,7 +4,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Elegir Cola - Pide-Cola 2.0 </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title> Elegir cola - Pide-Cola 2.0 </title>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -29,28 +33,28 @@
       <img src="./../assets/usuario_3.jpg" width="80px" height="100px">
       <p>Letras</p><br>
       <p>CANTIDAD: 1</p><br>
-      <button type="button">DAR COLA</button>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">DAR COLA</a>
     </div>
     <div class="usuario">
       <h5>Juan Marítimo</h5>
       <img src="./../assets/usuario_1.jpg" width="80px" height="100px">
-      <p>Ingeniería en Telecomunicaciones</p><br>
+      <p>Ing.Telecom</p><br>
       <p>CANTIDAD: 2</p><br>
-      <button type="button">DAR COLA</button>
+        <a href="./main.html" class="btn btn-success ml-card" role="button">DAR COLA</a>
     </div>
     <div class="usuario">
       <h5>Antonio Virtuoso</h5>
       <img src="./../assets/usuario_elegido.jpg" width="80px" height="100px">
       <p>Derecho</p><br>
       <p>CANTIDAD: 3</p><br>
-      <button type="button">DAR COLA</button>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">DAR COLA</a>
     </div>
     <div class="usuario">
       <h5>Amelia Smile</h5>
       <img src="./../assets/usuario_4.jpg" width="80px" height="100px">
       <p>Filosofía</p><br>
       <p>CANTIDAD: 1</p><br>
-      <button type="button">DAR COLA</button>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">DAR COLA</a>
     </div>
   </div>
 
