--- a/webpages/elegirPedirCola.html
+++ b/webpages/elegirPedirCola.html
@@ -4,7 +4,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Elegir Cola - Pide-Cola 2.0 </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title> Elegir Pedir cola - Pide-Cola 2.0 </title>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -27,37 +31,39 @@
     <div class="usuario">
       <h5>Jackie Chuan</h5>
       <img src="./../assets/usuario_5.jpg" width="80px" height="100px">
-      <p>Administración y Contaduría</p><br>
+      <p>Administración </p><br>
       <p>RESEÑAS: Mixtas</p><br>
-      <button type="button">PEDIR COLA</button>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
     </div>
     <div class="usuario">
       <h5>Dimitri Pachenko</h5>
       <img src="./../assets/usuario_elegido2.jpg" width="80px" height="100px">
       <p>Derecho</p><br>
-      <p>RESEÑAS: Muy Positivas</p><br>
-      <a href="./usuarioPedirCola.html"><button>PEDIR COLA</button></a>
+      <p>RESEÑAS:Positivas</p><br>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
     </div>
     <div class="usuario">
       <h5>Juan Sucre</h5>
       <img src="./../assets/usuario_6.jpg" width="80px" height="100px">
       <p>Economía</p><br>
-      <p>RESEÑAS: Mayormente Positivas</p><br>
-      <button type="button">PEDIR COLA</button>
+      <p>RESEÑAS:Positivas</p><br>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
     </div>
     <div class="usuario">
       <h5>Pablo Francisco</h5>
       <img src="./../assets/usuario_7.jpg" width="80px" height="100px">
       <p>Teología</p><br>
-      <p>RESEÑAS: Muy Negativas</p><br>
-      <button type="button">PEDIR COLA</button>
+      <p>RESEÑAS:Positivas</p><br>
+      <a href="./main.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
     </div>
   </div>
 
   <div class="footer">
     <p class="textoFooter">PPC C.A, ALL RIGHTS RESERVED</p>
   </div>
-
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
