--- a/webpages/elegirPedirCola.html
+++ b/webpages/elegirPedirCola.html
@@ -40,7 +40,7 @@
       <img src="./../assets/usuario_elegido2.jpg" width="80px" height="100px">
       <p>Derecho</p><br>
       <p>RESEÑAS:Positivas</p><br>
-      <a href="./main.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
+      <a href="./usuarioPedirCola.html" class="btn btn-success ml-card" role="button">Pedir cola</a>
     </div>
     <div class="usuario">
       <h5>Juan Sucre</h5>
